--- a/src/app/tab2-form-img/tab2-form-img.page.html
+++ b/src/app/tab2-form-img/tab2-form-img.page.html
@@ -11,21 +11,38 @@
   </ion-button>
   <form [formGroup]="formulario" class="appointment-form2">
 
-    <ion-list lines="full" class="ion-no-margin ion-no-padding">
-      <ion-progress-bar value="myPorcents | async" buffer="0.5" reversed="true" color="primary">
-      </ion-progress-bar>
 
+    <ion-progress-bar value="myPorcents | async" buffer="0.5" reversed="true" color="primary">
+    </ion-progress-bar>
+
+
+
+
+    <ion-list lines="full" class="ion-no-margin ion-no-padding">
+
+
+      <ion-thumbnail slot="start">
+        <img *ngIf="myPhotoURL" [src]="myPhotoURL | async">
+      </ion-thumbnail>
+      <ion-label>
+
+      </ion-label>
       <ion-item>
         <ion-label position="stacked">Obs</ion-label>
         <ion-input type="text" formControlName="obs" id="obs"></ion-input>
       </ion-item>
-
       <ion-item>
         <ion-label position="stacked">Url Img</ion-label>
         <ion-input type="text" [value]="myPhotoURL | async" formControlName="url" id="url"></ion-input>
       </ion-item>
-      <ion-img *ngIf="myPhotoURL" [src]="myPhotoURL | async"></ion-img>
+
+
+
+
     </ion-list>
+
+
+
     <div class="ion-padding">
       <ion-button expand="block" (click)="send()" class="ion-no-margin">Salvar</ion-button>
     </div>
